extracting dates from openai response